feat: add OK endless leaderboard
